--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Movie List</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <script type="text/javascript" src="index.js"></script>
+  
   <body>
+    
     <main>
       <h1>Movie List</h1>
       <section>
-        <form>
+        <form id="addFrom">
           <input placeholder="Add Movie" />
           <button>Add</button>
         </form>
@@ -19,5 +20,6 @@
       <ul></ul>
       <aside id="message"></aside>
     </main>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
